force-app/main/default/objects/UtFC_Film_Event__c/fields/Sundance_Played__c.field-meta.xml
<CustomField>
    <fullName>Sundance_Played__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Played at the Sundance Film Festival</description>
    <inlineHelpText>Played at the Sundance Film Festival</inlineHelpText>
    <label>Played Sundance Film Festival</label>
    <type>Checkbox</type>
</CustomField>