force-app/main/default/objects/UtFC_Film_Event__c/fields/Sundance_Supported__c.field-meta.xml
<CustomField>
    <fullName>Sundance_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this film/project supported by a lab, grant, etc from Sundance? Find out by searching for it here: http://history.sundance.org/</description>
    <inlineHelpText>Was this film/project supported by a lab, grant, etc from Sundance? Find out by searching for it here: http://history.sundance.org/</inlineHelpText>
    <label>Supported by Sundance Institute</label>
    <type>Checkbox</type>
</CustomField>