force-app/main/default/objects/UtFC_Film_Event__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <label>Short Synopsis (300 char)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>