force-app/main/default/objects/UtFC_Film_Event__c/fields/Teacher_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Attendance__c</fullName>
    <label>Teacher Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>