force-app/main/default/objects/UtFC_Film_Event__c/fields/Theatrical_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Theatrical_Release_Date__c</fullName>
    <label>Theatrical Release Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>