force-app/main/default/objects/UtFC_Film_Event__c/fields/ticket_cost__c.field-meta.xml
<CustomField>
    <fullName>ticket_cost__c</fullName>
    <label>Ticket Cost</label>
    <type>TextArea</type>
</CustomField>