force-app/main/default/objects/UtFC_Film_Event__c/fields/Total_Attendants__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendants__c</fullName>
    <formula>Education_Attendants__c  +  Non_Paid_Attendants__c  +  Paid_Attendants__c +Total_Festival_Paid_Tickets__c + Total_Festival_Non_Paid_Tickets__c +  Virtual_Paid_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attendants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>