force-app/main/default/objects/UtFC_Film_Event__c/fields/Total_Online_Viewers__c.field-meta.xml
<CustomField>
    <fullName>Total_Online_Viewers__c</fullName>
    <label>Total Online Viewers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>