force-app/main/default/objects/UtFC_Film_Event__c/fields/Utah_Based_Attendants__c.field-meta.xml
<CustomField>
    <fullName>Utah_Based_Attendants__c</fullName>
    <description>Used for donor reports</description>
    <inlineHelpText>Viewers based in Utah when participating</inlineHelpText>
    <label>Utah Based Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>