force-app/main/default/objects/UtFC_Film_Event__c/fields/Utah_Premeire__c.field-meta.xml
<CustomField>
    <fullName>Utah_Premeire__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the first screening of the film in Utah?</inlineHelpText>
    <label>Utah Premeire?</label>
    <type>Checkbox</type>
</CustomField>