force-app/main/default/objects/UtFC_Film_Event__c/fields/UtFC_Fiscal_Sponsor_Film__c.field-meta.xml
<CustomField>
    <fullName>UtFC_Fiscal_Sponsor_Film__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the Film&apos;s Object with details  in Salesforce.</inlineHelpText>
    <label>UtFC Fiscal Sponsor Film</label>
    <referenceTo>UtFC_Fiscal_Sponsor_Film__c</referenceTo>
    <relationshipLabel>UtFC Film Events</relationshipLabel>
    <relationshipName>UtFC_Film_Events</relationshipName>
    <type>Lookup</type>
</CustomField>