force-app/main/default/objects/UtFC_Film_Event__c/fields/UtFC_Fiscally_Sponsored__c.field-meta.xml
<CustomField>
    <fullName>UtFC_Fiscally_Sponsored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UtFC Fiscally Sponsored</label>
    <type>Checkbox</type>
</CustomField>