force-app/main/default/objects/UtFC_Film_Event__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>New Venue - see venue info</fullName>
                <label>(New Venue - see venue info)</label>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Alta Club</fullName>
            </value>
            <value>
                <fullName>Alta - Wildcat Parking Lot at Alta Ski Area</fullName>
            </value>
            <value>
                <fullName>Aneth Basketball Court, 859G6R9C+84 (Navajo Nation)</fullName>
            </value>
            <value>
                <fullName>Artist Foundry</fullName>
            </value>
            <value>
                <fullName>Avenues Street Fair</fullName>
            </value>
            <value>
                <fullName>Avrec</fullName>
            </value>
            <value>
                <fullName>Bluff Community Center, 859G7CMV+XJ</fullName>
            </value>
            <value>
                <fullName>Boulder City Park - Boulder, Utah</fullName>
            </value>
            <value>
                <fullName>Brewvies</fullName>
            </value>
            <value>
                <fullName>Broadway</fullName>
            </value>
            <value>
                <fullName>BYU Museum of Fine Arts - Provo</fullName>
            </value>
            <value>
                <fullName>Calvary Baptist Church</fullName>
            </value>
            <value>
                <fullName>Capitol Theater</fullName>
            </value>
            <value>
                <fullName>Century 16</fullName>
            </value>
            <value>
                <fullName>Christian Center</fullName>
            </value>
            <value>
                <fullName>Clayton Middle School</fullName>
            </value>
            <value>
                <fullName>Club Elevate</fullName>
            </value>
            <value>
                <fullName>Club Jam</fullName>
            </value>
            <value>
                <fullName>Covey Center - Provo</fullName>
            </value>
            <value>
                <fullName>Cucina Nassi</fullName>
            </value>
            <value>
                <fullName>Dan &amp; Noemi Mattis&apos; Home</fullName>
            </value>
            <value>
                <fullName>Dansante Building - Logan</fullName>
            </value>
            <value>
                <fullName>Diane &amp; Sam Stewart&apos;s Home</fullName>
            </value>
            <value>
                <fullName>Dolores Doré Eccles Fine Arts Center - St. George</fullName>
            </value>
            <value>
                <fullName>Draper Recreation Center</fullName>
            </value>
            <value>
                <fullName>Drive-In Alta</fullName>
            </value>
            <value>
                <fullName>Drive-In Dimple Dell (Sandy Rec Center)</fullName>
            </value>
            <value>
                <fullName>Drive-In Fairpark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>