force-app/main/default/objects/UtFC_Film_Event__c/fields/Venue_City__c.field-meta.xml
<CustomField>
    <fullName>Venue_City__c</fullName>
    <label>Venue City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>