force-app/main/default/objects/UtFC_Film_Event__c/fields/Videographer_contact_info__c.field-meta.xml
<CustomField>
    <fullName>Videographer_contact_info__c</fullName>
    <label>Videographer contact info</label>
    <type>TextArea</type>
</CustomField>