force-app/main/default/objects/UtFC_Film_Event__c/fields/Videographer_needed__c.field-meta.xml
<CustomField>
    <fullName>Videographer_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Videographer needed?</label>
    <type>Checkbox</type>
</CustomField>