force-app/main/default/objects/UtFC_Film_Event__c/fields/Virtual_Paid_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Paid_Attendees__c</fullName>
    <label>Virtual Paid Attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>