force-app/main/default/objects/UtFC_Film_Event__c/fields/Visiting_Guests__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Guests__c</fullName>
    <label>Post-Film Discussion Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>