force-app/main/default/objects/UtFC_Film_Event__c/fields/Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Volunteers__c</fullName>
    <label>Volunteers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>