force-app/main/default/objects/UtFC_Film_Event__c/fields/Webpage_URL__c.field-meta.xml
<CustomField>
    <fullName>Webpage_URL__c</fullName>
    <label>Webpage URL</label>
    <type>Url</type>
</CustomField>