force-app/main/default/objects/UtFC_Film_Event__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Film&apos;s Official Website</label>
    <type>Url</type>
</CustomField>