force-app/main/default/objects/UtFC_Film_Event__c/fields/Workshop_Campaign_AF__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Campaign_AF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related campaign that includes registrant information</description>
    <inlineHelpText>Related campaign that includes registrant information</inlineHelpText>
    <label>Workshop Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Film Events (Workshop Campaign)</relationshipLabel>
    <relationshipName>UtFC_Film_Events3_AF</relationshipName>
    <type>Lookup</type>
</CustomField>