force-app/main/default/objects/UtFC_Film_Event__c/fields/Workshop_Description_AF__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Description_AF__c</fullName>
    <label>Workshop Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>