force-app/main/default/objects/UtFC_Film_Event__c/fields/Workshop_Number_of_Instructors__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Number_of_Instructors__c</fullName>
    <label>Number of Instructors</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>