force-app/main/default/objects/UtFC_Film_Event__c/listViews/Artist_Foundry_Workshops.listView-meta.xml
<ListView>
    <fullName>Artist_Foundry_Workshops</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Paid_Attendants__c</columns>
    <columns>Total_Attendants__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Venue__c</field>
        <operation>equals</operation>
        <value>Artist Foundry</value>
    </filters>
    <label>Artist Foundry Workshops</label>
</ListView>