force-app/main/default/objects/UtFC_Film_Event__c/listViews/Damn_These_Heels_2021.listView-meta.xml
<ListView>
    <fullName>Damn_These_Heels_2021</fullName>
    <columns>Date_and_Time__c</columns>
    <columns>NAME</columns>
    <columns>Venue__c</columns>
    <columns>Total_Attendants__c</columns>
    <columns>Non_Paid_Attendants__c</columns>
    <columns>Paid_Attendants__c</columns>
    <columns>Additional_Info_for_Web_page__c</columns>
    <columns>Cast__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Series__c</field>
        <operation>equals</operation>
        <value>Damn! These Heels,Damn These Heels</value>
    </filters>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>greaterThan</operation>
        <value>7/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>lessThan</operation>
        <value>9/1/2021 12:00 AM</value>
    </filters>
    <label>Damn These Heels 2021</label>
</ListView>