force-app/main/default/objects/UtFC_Film_Event__c/listViews/Damn_These_Heels_Festival_Screenings.listView-meta.xml
<ListView>
    <fullName>Damn_These_Heels_Festival_Screenings</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Venue__c</columns>
    <columns>Film_Festival_History__c</columns>
    <columns>Premiere_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Series__c</field>
        <operation>equals</operation>
        <value>Damn! These Heels</value>
    </filters>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>greaterThan</operation>
        <value>6/1/2020 12:00 AM</value>
    </filters>
    <label>Damn These Heels Festival Screenings</label>
</ListView>