force-app/main/default/objects/UtFC_Film_Event__c/listViews/Design_Matters.listView-meta.xml
<ListView>
    <fullName>Design_Matters</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Venue__c</columns>
    <columns>Program_Series__c</columns>
    <columns>Genre__c</columns>
    <columns>Total_Attendants__c</columns>
    <columns>Salt_Lake_County__c</columns>
    <columns>Visiting_Guests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Series__c</field>
        <operation>equals</operation>
        <value>Design Matters</value>
    </filters>
    <filters>
        <field>Postponed_Cancelled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Design Matters - Program Series</label>
</ListView>