force-app/main/default/objects/UtFC_Film_Event__c/listViews/Development_View.listView-meta.xml
<ListView>
    <fullName>Development_View</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Venue__c</columns>
    <columns>Visiting_Guests__c</columns>
    <columns>Director__c</columns>
    <columns>UtFC_Fiscally_Sponsored__c</columns>
    <columns>Programmer_s_Notes__c</columns>
    <columns>Open_Caption__c</columns>
    <columns>Edited__c</columns>
    <columns>Film_Festival_History__c</columns>
    <filterScope>Everything</filterScope>
    <label>Development View</label>
</ListView>