force-app/main/default/objects/UtFC_Film_Event__c/listViews/Drive_Ins_Lists.listView-meta.xml
<ListView>
    <fullName>Drive_Ins_Lists</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Program_Series__c</columns>
    <columns>Venue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Series__c</field>
        <operation>equals</operation>
        <value>Drive-in</value>
    </filters>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>greaterThan</operation>
        <value>8/1/2020 12:00 AM</value>
    </filters>
    <label>Drive-Ins with date filtering</label>
</ListView>