force-app/main/default/objects/UtFC_Film_Event__c/listViews/DTH_Year_round.listView-meta.xml
<ListView>
    <fullName>DTH_Year_round</fullName>
    <columns>Date_and_Time__c</columns>
    <columns>NAME</columns>
    <columns>Program_Series__c</columns>
    <columns>Venue__c</columns>
    <columns>Country__c</columns>
    <columns>Awards__c</columns>
    <columns>Director__c</columns>
    <columns>Long_Synopsis__c</columns>
    <columns>Post_Film_Discussion__c</columns>
    <columns>Runtime_Minutes__c</columns>
    <columns>Year__c</columns>
    <columns>Language__c</columns>
    <columns>Description_for_Web__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>greaterThan</operation>
        <value>9/24/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>lessThan</operation>
        <value>9/28/2015 12:00 AM</value>
    </filters>
    <label>DTH Festival for Marketing</label>
</ListView>