force-app/main/default/objects/UtFC_Film_Event__c/listViews/DTH_Year_round1.listView-meta.xml
<ListView>
    <fullName>DTH_Year_round1</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Total_Attendants__c</columns>
    <columns>Visiting_Guests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Series__c</field>
        <operation>equals</operation>
        <value>Damn These Heels! Year-Round</value>
    </filters>
    <label>DTH Year-round</label>
</ListView>