force-app/main/default/objects/UtFC_Film_Event__c/listViews/Female_Directors.listView-meta.xml
<ListView>
    <fullName>Female_Directors</fullName>
    <columns>Date_and_Time__c</columns>
    <columns>NAME</columns>
    <columns>Program_Series__c</columns>
    <columns>Venue__c</columns>
    <columns>Female_Director__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Female_Director__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Female Directors</label>
</ListView>