force-app/main/default/objects/UtFC_Film_Event__c/listViews/Films_Without_Borders.listView-meta.xml
<ListView>
    <fullName>Films_Without_Borders</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Total_Attendants__c</columns>
    <columns>Venue__c</columns>
    <columns>Visiting_Guests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Series__c</field>
        <operation>equals</operation>
        <value>Films Without Borders</value>
    </filters>
    <label>Films Without Borders</label>
</ListView>