force-app/main/default/objects/UtFC_Film_Event__c/listViews/Marketing_View.listView-meta.xml
<ListView>
    <fullName>Marketing_View</fullName>
    <columns>Confirmed__c</columns>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Venue__c</columns>
    <columns>Edited__c</columns>
    <columns>UtFC_Fiscally_Sponsored__c</columns>
    <columns>Open_Caption__c</columns>
    <columns>Director__c</columns>
    <columns>Programmer_s_Notes__c</columns>
    <columns>Visiting_Guests__c</columns>
    <columns>Country__c</columns>
    <columns>Film_Festival_History__c</columns>
    <columns>Runtime_Minutes__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>greaterThan</operation>
        <value>3/1/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Date_and_Time__c</field>
        <operation>lessThan</operation>
        <value>3/31/2021 12:00 AM</value>
    </filters>
    <label>Marketing View</label>
</ListView>