force-app/main/default/objects/UtFC_Film_Event__c/listViews/Moab.listView-meta.xml
<ListView>
    <fullName>Moab</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time__c</columns>
    <columns>Partners__c</columns>
    <columns>Total_Attendants__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Venue__c</field>
        <operation>equals</operation>
        <value>Moab</value>
    </filters>
    <label>Moab</label>
</ListView>